Fixed spacing issues

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -106,5 +106,5 @@
   font-size: 14px;
   line-height: 17px;
   min-height: 50px;
-  margin-top: 25px;
+  margin-top: 45px;
 }
